Fixed blurring of text on webkit browsers by replacing CSS centering of modals with a little computed CSS.

--- a/css/nifty.css
+++ b/css/nifty.css
@@ -9,14 +9,6 @@
 	min-width: 320px;
 	height: auto;
 	z-index: 2000;
-	visibility: hidden;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-webkit-transform: translateX(-50%) translateY(-50%);
-	-moz-transform: translateX(-50%) translateY(-50%);
-	-ms-transform: translateX(-50%) translateY(-50%);
-	transform: translateX(-50%) translateY(-50%);
 }
 
 .nifty-error {
@@ -292,10 +284,6 @@
 /* Effect 7:  slide and stick to top */
 .nifty-effect-7{
 	top: 0;
-	-webkit-transform: translateX(-50%);
-	-moz-transform: translateX(-50%);
-	-ms-transform: translateX(-50%);
-	transform: translateX(-50%);
 }
 
 .nifty-effect-7 .nifty-content {
